--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,2 +1,17 @@
-<h1>Products#index</h1>
-<p>Find me in app/views/products/index.html.erb</p>
+<%= link_to "Add New Product", "products/new" %>
+
+
+<h1>Products</h1>
+
+  <% @products.each do | product |  %>
+
+    <ul>
+      <%= link_to product.name, "products/#{product.id}" %>
+      <li>
+        <%= product.description %>
+      </li>
+      <li>
+        <%= product.price_in_cents %>
+      </li>
+    </ul>
+  <% end %>
