--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,2 +1,5 @@
-<h1>Products#edit</h1>
-<p>Find me in app/views/products/edit.html.erb</p>
+<%= link_to 'Back', products_path %>
+
+<h1> Update Product</h1>
+
+<%= render 'form' %>
