--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -15,3 +15,4 @@
   </ul>
 
   <%= link_to "Edit Product Information", "#{@product.id}/edit" %>
+  <%= link_to "Delete Product", @product, method: :delete, data: {confirm: "Are you sure you would like to delete this product from Rainforest?"} %>
