Displaying price in dollars

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -10,7 +10,7 @@
       <%= @product.description %>
     </li>
     <li>
-      <%= @product.price_in_cents %>
+      <%= @product.formatted_price %>
     </li>
   </ul>
 
