--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,17 +1,10 @@
 <%= link_to "Add New Product", "products/new" %>
 
+<%= form_tag products_path, method: :get, authentication: false, id: 'search-form' do %>
+  <%= text_field_tag :search, params[:search] %>
+  <%= submit_tag "Search" %>
+<% end %>
 
 <h1>Products</h1>
 
-  <% @products.each do | product |  %>
-
-    <ul>
-      <%= link_to product.name, "products/#{product.id}" %>
-      <li>
-        <%= product.description %>
-      </li>
-      <li>
-        <%= product.formatted_price %>
-      </li>
-    </ul>
-  <% end %>
+<%= render @products %>
