--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,12 +1,16 @@
+<h1>Product Listings</h1>
+
 <%= link_to "Add New Product", "products/new" %>
+
+<h1><small><%= page_entries_info @products %></small></h1>
 
 <%= form_tag products_path, method: :get, authentication: false, id: 'search-form' do %>
   <%= text_field_tag :search, params[:search] %>
   <%= submit_tag "Search" %>
 <% end %>
 
-<h1>Products</h1>
-
 <div id="products">
   <%= render @products %>
 </div>
+
+<%= paginate @products %>
